@@ -1,5 +1,9 @@
 2004-11-04  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c: (parse_syslog): Kill. Not used anymore.
+
+2004-11-04  Vincent Noel  <vnoel@cox.net>
+
 	* logview.c (destroy): Only save the size and opened log when
 	destroying the last window.
 
